--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -116,7 +116,7 @@
             <div class="item separator" *ngIf="EsMedico==true"></div>
             <!-- lo que ve el doctor-->
             <div class="item" *ngIf="EsMedico==true">
-                <a href="#">
+                <a href="Pacientes">
                     <div style="float: left" alt="Pacientes" title="Mis Pacientes" class="icon">
                         <img src="https://github.com/romeoaxpuac123/MisImagenes/blob/main/Diabetic/Iconos/Pacientes.png?raw=true" alt="">
                     </div>
