--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -129,7 +129,7 @@
             <div class="item separator" *ngIf="EsMedico==true"></div>
 
             <div class="item" alt="Reportes" title="Ver reportes de mis pacientes" *ngIf="EsMedico==true">
-                <a href="#">
+                <a href="ReportePaciente">
                     <div style="float: left" class="icon">
                         <img src="https://github.com/romeoaxpuac123/MisImagenes/blob/main/Diabetic/Iconos/Hematologia.png?raw=true" alt="">
                     </div>
