--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -103,7 +103,7 @@
             <div class="item separator" *ngIf="EsMedico==false"></div>
 
             <div class="item" alt="Recomendaciones" title="Recomendaciones del día" *ngIf="EsMedico==false">
-                <a href="#">
+                <a href="Recomendaciones">
                     <div style="float: left" class="icon">
                         <img src="https://github.com/romeoaxpuac123/MisImagenes/blob/main/Diabetic/Iconos/Recomendacion.png.png?raw=true" alt="">
                     </div>
