intolerancia en recomendaciones

--- a/src/app/components/ficha/ficha.component.html
+++ b/src/app/components/ficha/ficha.component.html
@@ -77,14 +77,14 @@
             <input [(ngModel)]="Medicamente5" type="text" list="itemsMedicina" value={{Medicamente5}}/>
             <br>
             <datalist id="itemsIntolerancia">
-                <option value="Alergia al huevo">Alergia al huevo</option>
-                <option value="Alergia al marisco">Alergia al marisco</option>
-                <option value="Alergia al pescado">Alergia al pescado</option>
-                <option value="Alergia a frutos secos">Alergia a frutos secos</option>
-                <option value="Alergia a legumbres">Alergia a legumbres</option>
-                <option value="Alergia a cereales">Alergia a cereales</option>
-                <option value="Alergia a verduras">Alergia a verduras</option>
-                <option value="Alergia a frutas">Alergia a frutas</option>
+                <option value="Huevo">Alergia al huevo</option>
+                <option value="Marisco">Alergia al marisco</option>
+                <option value="Pescado">Alergia al pescado</option>
+                <option value="Frutos secos">Alergia a frutos secos</option>
+                <option value="Legumbres">Alergia a legumbres</option>
+                <option value="Cereales">Alergia a cereales</option>
+                <option value="Verduras">Alergia a verduras</option>
+                <option value="Frutas">Alergia a frutas</option>
                 <option value="Gluten">Gluten</option>
                 <option value="Lactosa">Lactosa</option>
                 <option value="Histamina">Histamina</option>
