--- a/src/app/components/recomendaciones/recomendaciones.component.html
+++ b/src/app/components/recomendaciones/recomendaciones.component.html
@@ -118,7 +118,7 @@
 
             <br><br>
 
-            <button id="boton_personalizado">Ver Rutina</button>
+            <button (click)="MiRutina();" id="boton_personalizado">Ver Rutina</button>
         </div>
         <br>
 
